# Reinforcement-Learning-course

./: .gitignore  LICENSE  README.md  cartpole.py  dqn.py  frozen_lake.py  frozen_lake_agent.py  lunar_lander.pth  lunar_lander.py  pyproject.toml  q_learning.py  utils.py
.ipynb_checkpoints/: cartpole-checkpoint.py  cartpole_dqn-checkpoint.py  dqn-checkpoint.py  lunar_lander-checkpoint.py  q_learning-checkpoint.py  utils-checkpoint.py
deep_rl/: agents.py  cartpole.py  cartpole_dqn.pth  dqn.py  lunar_lander.py  lunar_lander_dqn.pth  mountain_car.py  mountain_car_dqn.pth  networks.py  utils.py
deep_rl/dqn/: acrobot.py  agents.py  cartpole.py  dqn.py  lunar_lander.py  mountain_car.py  test.ipynb  utils.py
deep_rl/reinforce/: networks.py
deep_rl/reinforce-baseline/: lunar_lander.py
dqn/: cartpole.pth  cartpole.py  dqn.py  lunar_lander.pth  lunar_lander.py
dynamic-programming/: agents.py  cliff_walking.py  dynamic_programming.py  taxi.py
dynamic-programming/.ipynb_checkpoints/: frozen_lake-checkpoint.py
heuristics/: agents.py  astar.py  cliff_walking.py  test.ipynb
monte_carlo/: agents.py  blackjack.py  frozen_lake.py
old/dynamic-programming/: frozen_lake.py
old/heuristics/: agents.py  astar.py  frozen_lake.py
old/monte_carlo/: agents.py  cliff_walking.py  frozen_lake.py  mc.py  taxi.py
old/temporal_difference/: agents.py  cliff_walking.py  expected_sarsa.py  sarsa.py
temporal_difference/: agents.py  blackjack.py  cartpole.py  cliff_walking.py  double_q_learning.py  frozen_lake.py  q-learning.ipynb  q_learning.py  taxi.py
(+1109 files in other folders)
