[project]
name = "reinforcement-learning-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayman Chaouki"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "gymnasium[toy-text] (>=1.2.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
