[project]
name = "reinforcement-learning-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayman Chaouki"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "gymnasium[box2d] (>=1.2.3,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "swig (>=4.4.1,<5.0.0)",
    "vizdoom (>=1.3.0,<2.0.0)"
]


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
torch = {version = "2.2.2+cu121", source = "pytorch-cu121"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
